--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -9,8 +9,7 @@
     color: $navlink-default;
     font-size: 12px;
     line-height: 20px;
-    font-weight: bold;
-    padding: 12px 4px;
+    padding: 12px 5px;
     text-decoration: none;
     text-transform: uppercase;
     cursor: pointer;
@@ -23,11 +22,9 @@
     }
     @include breakpoint(1280px) {
       padding: 12px 15px;
-      font-size: 14px;
     }
     .ie & {
       font-size: 11px;
-      font-weight: normal;
       @include breakpoint(1024px) {
         padding: 12px 8px;
         font-size: 14px;
